--- a/product-microservice-dev.properties
+++ b/product-microservice-dev.properties
@@ -1,2 +1,2 @@
 product.property=Product Profile Dev
-app.testProp=Property of test updated for Bus and message broker
+app.testProp=Property of test updated for Bus and message broker!
